added spark streeming and data generator to project modified data genereated

--- a/flume/kafka.conf
+++ b/flume/kafka.conf
@@ -5,7 +5,7 @@ agent1.sinks = logger1 hdfs2
 
 #Source Configuration
 agent1.sources.netcat1.type = netcat
-agent1.sources.netcat1.bind = localhost
+agent1.sources.netcat1.bind = quickstart
 agent1.sources.netcat1.port = 12345
 agent1.sources.netcat1.channels = memory1 memory2
 agent1.sources.netcat1.selector.type = replicating
@@ -13,8 +13,8 @@ agent1.sources.netcat1.selector.type = replicating
 #Channel Configuration
 agent1.channels.memory1.type = memory
 agent1.channels.memory2.type = org.apache.flume.channel.kafka.KafkaChannel
-agent1.channels.memory2.brokerList = localhost:9092
-agent1.channels.memory2.zookeeperConnect = localhost:2181
+agent1.channels.memory2.brokerList = quickstart:9092
+agent1.channels.memory2.zookeeperConnect = quickstart:2181
 agent1.channels.memory2.topic = mychannel
 
 #Sink Configuration 
