--- a/flume/simple.conf
+++ b/flume/simple.conf
@@ -5,7 +5,7 @@ agent1.sinks = logger1
 
 #Source Configuration
 agent1.sources.netcat1.type = netcat
-agent1.sources.netcat1.bind = localhost
+agent1.sources.netcat1.bind = quickstart
 agent1.sources.netcat1.port = 12345
 agent1.sources.netcat1.channels = memory1
 
