--- a/flume/complex.conf
+++ b/flume/complex.conf
@@ -5,7 +5,7 @@ agent1.sinks = logger1 hdfs2
 
 #Source Configuration
 agent1.sources.netcat1.type = netcat
-agent1.sources.netcat1.bind = localhost
+agent1.sources.netcat1.bind = quickstart
 agent1.sources.netcat1.port = 12345
 agent1.sources.netcat1.channels = memory1 memory2
 agent1.sources.netcat1.selector.type = replicating
@@ -19,7 +19,7 @@ agent1.sinks.logger1.type = logger
 agent1.sinks.logger1.channel = memory1
 
 agent1.sinks.hdfs2.type = hdfs
-agent1.sinks.hdfs2.hdfs.path = hdfs://localhost:8020/user/cloudera/test
+agent1.sinks.hdfs2.hdfs.path = hdfs://quickstart:8020/user/cloudera/
 agent1.sinks.hdfs2.hdfs.rollCount = 10
 agent1.sinks.hdfs2.hdfs.batchSize = 10
 agent1.sinks.hdfs2.hdfs.writeFormat = Text
